# wexa-analytics-

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANUAL_TESTING.md  Makefile  README.md  render.yaml
backend/: .env.example  Dockerfile  alembic.ini  fly.toml  nixpacks.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260517_1131_a4bfc2bf69b6_initial_schema.py  20260517_1332_5268e0893e5f_increase_api_key_prefix_length.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  (+7 more)
backend/app/core/: config.py  database.py  dependencies.py  email.py  exceptions.py  middleware.py  redis.py  security.py
backend/app/models/: __init__.py  alert.py  alert_history.py  api_key.py  base.py  dashboard.py  event.py  invite.py  membership.py  organization.py  refresh_token.py  report.py  saved_query.py  user.py  widget.py
backend/app/repositories/: alert_repo.py  api_key_repo.py  base.py  dashboard_repo.py  event_repo.py  organization_repo.py  report_repo.py  user_repo.py  widget_repo.py
backend/app/schemas/: alert.py  api_key.py  auth.py  common.py  dashboard.py  event.py  organization.py  report.py  widget.py
backend/app/services/: api_key_service.py  auth_service.py  dashboard_service.py  ingestion_service.py  organization_service.py
backend/scripts/: seed.py  verify_connections.py
backend/tests/: conftest.py  test_health.py  test_metrics.py  test_phase1_health.py  test_phase2_api_keys.py  test_phase2_auth.py  test_phase2_invite_email.py  test_phase2_organizations.py  test_phase3_ingestion.py  test_phase4_dashboards.py
(+52 files in other folders)
